--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -1,16 +1,19 @@
 [alias]
-    co = checkout
-    rb = rebase -i
-    st = status
-    cm = commit
-    pl = pull
-    ps = push
-    lg = log --graph --abbrev-commit --decorate --format=format:'%C(cyan)%h%C(reset) - %C(green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all
-    ad = add
-    tg = tag -n
-    df = diff
-    dfc = diff --color-words
-    dfs = diff --staged
-    dfsc = diff --staged --color-words
-    br = branch
-    nfmerge = merge --no-ff
+	co = checkout
+	rb = rebase -i
+	st = status
+	cm = commit
+	pl = pull
+	ps = push
+	lg = log --graph --abbrev-commit --decorate --format=format:'%C(cyan)%h%C(reset) - %C(green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all
+	ad = add
+	tg = tag -n
+	df = diff
+	dfc = diff --color-words
+	dfs = diff --staged
+	dfsc = diff --staged --color-words
+	br = branch
+	nfmerge = merge --no-ff
+
+[core]
+	autocrlf = true
