--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -6,6 +6,7 @@
 	pl = pull
 	ps = push
 	lg = log --graph --abbrev-commit --decorate --format=format:'%C(cyan)%h%C(reset) - %C(green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all
+	lgn = lg --name-status
 	ad = add
 	tg = tag -n
 	df = diff
